--- a/RegistrationApp/pom.xml
+++ b/RegistrationApp/pom.xml
@@ -62,6 +62,25 @@
         	<artifactId>hibernate-validator</artifactId>
         	<version>6.0.13.Final</version>
     	</dependency>
+    	<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			</dependency>
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-web</artifactId>
+		    </dependency>
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-config</artifactId>
+		</dependency>
+				
+		
 	</dependencies>
 
 	<build>
